--- a/pico.css
+++ b/pico.css
@@ -17,6 +17,7 @@ a {
 	align-items: center; -webkit-align-items: center;
 }
 #header {
+	z-index: 100;
 	margin: 0px;
 	flex: 0 1 auto;
 	display: flex; display: -webkit-flex;
@@ -44,6 +45,7 @@ a {
 	display: none;
 }
 #footer {
+	z-index: 100;
 	width: 100%; height: 12px; margin-top: -8px;
 	flex: 0 1 auto;
 	display: flex; display: -webkit-flex;
@@ -152,20 +154,20 @@ a {
 		}
 	}
 }
-@media (max-aspect-ratio: 0.8) {
+@media (min-aspect-ratio: 1.0) {
 	#screen {
-		width: 100%;
+		height: 100%;
 	}
 	#widescreen {
-		height: 100%;
+		height: 150%;
 	}
 }
-@media (min-aspect-ratio: 0.8) {
+@media (max-aspect-ratio: 1.0) {
 	#screen {
-		height: 100%;
+		width: 100%;
 	}
 	#widescreen {
-		width: 100%;
+		height: 100%;
 	}
 }
 @media (prefers-color-scheme: dark) {
